--- a/client/src/css/Orders/Orders.css
+++ b/client/src/css/Orders/Orders.css
@@ -7,25 +7,25 @@
 .orders .heading {
   display: flex;
   margin-bottom: 20px;
-  color: var(--textSecondColor);
+  color: var(--second-text-color);
   font-size: 20px;
 }
 .orders .heading .head-item {
   width: 25%;
-  padding: var(--padding) 20px;
+  padding: var(--main-padding) 20px;
   text-align: center;
 }
-.orders .order-information .main-order {
+.orders .order-information {
   display: flex;
   flex-wrap: wrap;
   align-items: stretch;
-  background-color: var(--bodyWhite);
+  background-color: var(--boxes-bg);
   box-shadow: var(--boxShadow);
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+  border-radius: 50px;
+  margin-bottom: 10px;
 }
-.orders .order-information .main-order > div {
-  color: var(--textSecondColor);
+.orders .order-information > div {
+  color: var(--second-text-color);
   width: 25%;
   padding: 15px 20px;
   font-size: 17px;
@@ -33,11 +33,11 @@
   align-items: center;
   justify-content: center;
 }
-.orders .order-information .main-order > div svg {
+.orders .order-information > div svg {
   font-size: 20px;
   transition: all 0.3s;
 }
-.orders .order-information .main-order > div.show-more, .orders .order-information .main-order > div.delete {
+.orders .order-information > div.show-more, .orders .order-information > div.delete {
   width: fit-content;
   padding: 10px;
   margin: auto;
@@ -45,126 +45,30 @@
   transition: 0.3s;
   cursor: pointer;
 }
-.orders .order-information .main-order > div.show-more svg, .orders .order-information .main-order > div.delete svg {
+.orders .order-information > div.show-more svg, .orders .order-information > div.delete svg {
   font-size: 20px;
-  color: var(--textSecondColor);
+  color: var(--second-text-color);
   transition: 0.3s;
 }
-.orders .order-information .main-order > div.show-more:hover, .orders .order-information .main-order > div.delete:hover {
-  background-color: var(--secondColor);
+.orders .order-information > div.show-more:hover, .orders .order-information > div.delete:hover {
+  background-color: var(--hover-bg);
 }
-.orders .order-information .main-order > div.show-more:hover svg, .orders .order-information .main-order > div.delete:hover svg {
-  color: var(--redColor);
+.orders .order-information > div.show-more:hover svg, .orders .order-information > div.delete:hover svg {
+  color: var(--second-color);
 }
-.orders .order-information .main-order > div.edit-arrow svg {
-  color: var(--redColor);
+.orders .order-information > div.edit-arrow svg {
+  color: var(--second-color);
   transition: all 0.3s;
   transform: rotate(90deg);
 }
-.orders .order-information .main-order > div.image {
+.orders .order-information > div.image {
   display: block;
   text-align: center;
 }
-.orders .order-information .main-order > div.image img {
+.orders .order-information > div.image img {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-}
-.orders .order-information .order-details {
-  transition: height 0.4s, opacity 0.4s;
-  height: 0;
-  opacity: 0;
-  overflow: hidden;
-  margin-bottom: 10px;
-  background-color: var(--bodyWhite);
-  box-shadow: var(--boxShadow);
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-}
-.orders .order-information .order-details.show {
-  opacity: 1;
-}
-.orders .order-information .order-details .order-items {
-  padding: var(--padding);
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-.orders .order-information .order-details .order-items .order-item {
-  background: var(--bodyColor);
-  box-shadow: var(--boxShadow);
-  padding: 5px;
-  display: flex;
-  align-items: center;
-}
-.orders .order-information .order-details .order-items .order-item > div {
-  width: 25%;
-  text-align: center;
-}
-.orders .order-information .order-details .order-items .order-item .img-item img {
-  width: 50px;
-  height: 50px;
-  object-fit: contain;
-}
-.orders .order-information .order-details .order-items .order-item .price {
-  color: var(--textSecondColor);
-}
-.orders .order-information .order-details .order-items .order-item .price span {
-  margin-top: 5px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 5px;
-  font-size: 14px;
-}
-.orders .order-information .order-details .order-items .order-item .price span svg {
-  font-size: 13px;
-}
-.orders .order-information .order-details .order-items .order-item .delete {
-  cursor: pointer;
-}
-.orders .order-information .order-details .order-items .order-item .delete svg {
-  padding: 10px;
-  font-size: 40px;
-  transition: 0.3s;
-  border-radius: 50%;
-  color: var(--redColor);
-  margin: auto;
-}
-.orders .order-information .order-details .order-items .order-item .delete svg:hover {
-  background-color: var(--bkBlue);
-  box-shadow: var(--boxShadow);
-}
-.orders .order-information .order-details .order-items .order-item .size-color {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: var(--border);
-  width: fit-content;
-  margin: auto;
-  overflow: hidden;
-}
-.orders .order-information .order-details .order-items .order-item .size-color span {
-  width: 40px;
-  display: block;
-  height: 40px;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: var(--textSecondColor);
-  font-weight: bold;
-}
-.orders .order-information .order-details .order-items .user-info > p {
-  background-color: var(--bkBlue);
-  border-radius: 5px;
-  padding: 5px;
-  color: var(--textSecondColor);
-  margin-bottom: 1px;
-}
-.orders .order-information .order-details .order-items .user-info > p span {
-  display: inline-block;
-  width: 100px;
 }
 
 @media (max-width: 767px) {
