--- a/client/src/css/Products/Products.css
+++ b/client/src/css/Products/Products.css
@@ -5,12 +5,13 @@
   gap: 15px;
 }
 .products-wrapper .product-item {
-  background-color: var(--bodyWhite);
+  background-color: var(--boxes-bg);
   box-shadow: 0px 1px 3px rgba(3, 0, 71, 0.09);
   overflow: hidden;
   border-radius: 10px;
   text-align: center;
   transition: 0.3s;
+  border: var(--boxes-border);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -20,8 +21,8 @@
   box-shadow: 0px 1px 15px rgba(3, 0, 71, 0.15);
 }
 .products-wrapper .product-item .product-discount {
-  background-color: var(--redColor);
-  color: var(--textColor);
+  background-color: var(--second-color);
+  color: var(--main-text-color);
   transform: rotate(-45deg);
   position: absolute;
   padding: 2px;
@@ -35,24 +36,24 @@
   max-width: 100%;
   margin: auto;
   cursor: pointer;
-  padding: var(--padding);
+  padding: var(--main-padding);
 }
 .products-wrapper .product-item .product-desc .title {
-  color: var(--textSecondColor);
+  color: var(--second-text-color);
   text-transform: capitalize;
-  padding: var(--padding);
+  padding: var(--main-padding);
   text-align: left;
 }
 .products-wrapper .product-item .product-desc .price-add {
-  padding: var(--padding);
+  padding: var(--main-padding);
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: var(--redColor);
+  color: var(--second-color);
 }
 .products-wrapper .product-item .product-desc .price-add .add {
   border-radius: 5px;
-  border: 1px solid var(--redColor);
+  border: 1px solid var(--second-color);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -64,6 +65,6 @@
   transform: scale(0.93);
 }
 .products-wrapper .product-item .product-desc .price-add .add.add:hover {
-  background-color: var(--redColor);
-  color: var(--textColor);
+  background-color: var(--second-color);
+  color: var(--main-text-color);
 }
