--- a/client/src/css/UpdateProduct/UpdateProduct.css
+++ b/client/src/css/UpdateProduct/UpdateProduct.css
@@ -5,13 +5,13 @@
 }
 .update-product .container .products {
   margin: 20px auto 0;
-  color: var(--textSecondColor);
+  color: var(--second-text-color);
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 10px;
 }
 .update-product .container .products .product-item {
-  background-color: var(--bodyWhite);
+  background-color: var(--boxes-bg);
   border-radius: 10px;
   box-shadow: var(--boxShadow);
   display: flex;
@@ -37,8 +37,8 @@
   overflow: hidden;
 }
 .update-product .container .products .product-item .item .product-discount {
-  background-color: var(--redColor);
-  color: var(--textColor);
+  background-color: var(--second-color);
+  color: var(--main-text-color);
   width: 150px;
   font-size: 13px;
   padding: 2px 8px;
@@ -71,16 +71,16 @@
 .update-product .container .products .product-item .buttons button {
   width: 50%;
   border: none;
-  background-color: var(--redColor);
-  color: var(--textColor);
+  background-color: var(--second-color);
+  color: var(--main-text-color);
   padding: 5px;
   font-weight: bold;
   font-size: 20px;
-  background-color: var(--bkBlue);
+  background-color: var(--main-light-bg);
 }
 .update-product .container .products .product-item .buttons .update svg {
   color: green;
 }
 .update-product .container .products .product-item .buttons .remove svg {
-  color: var(--redColor);
+  color: var(--second-color);
 }
