--- a/client/src/components/ErrorPage/ErrorPage.scss
+++ b/client/src/components/ErrorPage/ErrorPage.scss
@@ -10,13 +10,15 @@
 	justify-content: space-between;
 	align-items: center;
 	gap: 40px;
+
 	img {
 		width: 100%;
 	}
+
 	a {
 		text-decoration: none;
-		color: var(--textColor);
-		background-color: var(--redColor);
+		color: var(--main-text-color);
+		background-color: var(--second-color);
 		padding: 10px 20px;
 		border-radius: 10px;
 	}
