--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -1,10 +1,88 @@
 footer {
-	padding: 20px;
 	grid-area: footer;
+	height: fit-content;
+	padding: 20px;
 	background-color: var(--mainColor);
-	color: var(--textColor);
+	color: var(--main-text-color);
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	font-size: 20px;
+	// font-size: 20px;
+
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+	> div {
+		width: 100%;
+	}
+	.title {
+		border-bottom: var(--main-border);
+		margin-bottom: 10px;
+		padding-bottom: 5px;
+		width: fit-content;
+	}
+
+	.info {
+		display: flex;
+		justify-content: space-evenly;
+		align-items: stretch;
+		gap: 10px;
+
+		.about {
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+
+			width: 400px;
+			.desc {
+			}
+		}
+
+		.contact {
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+
+			.content {
+				> div {
+					margin-top: 7px;
+					display: flex;
+					align-items: center;
+					gap: 10px;
+					svg {
+						color: var(--main-text-color);
+					}
+				}
+			}
+		}
+	}
+
+	hr {
+		background-color: var(--second-color);
+		width: 100%;
+		height: 1px;
+		border: none;
+	}
+
+	.social {
+		display: flex;
+		justify-content: space-evenly;
+		align-items: center;
+		.copy {
+		}
+		.icons {
+			display: flex;
+			align-items: center;
+			gap: 5px;
+			svg {
+				color: var(--main-text-color);
+				cursor: pointer;
+				font-size: 30px;
+				&:hover {
+					transition: 0.3s;
+					color: var(--second-color);
+				}
+			}
+		}
+	}
 }
