--- a/client/src/components/SearchBox/SearchBox.scss
+++ b/client/src/components/SearchBox/SearchBox.scss
@@ -2,14 +2,14 @@
 	width: 70%;
 	margin: auto;
 	padding: 20px;
-	background-color: var(--bodyWhite);
+	background-color: var(--boxes-bg);
 	border-radius: 40px;
 	box-shadow: var(--boxShadow);
 	.box {
 		display: flex;
 		align-items: stretch;
 		overflow: hidden;
-		background-color: var(--bodyColor);
+		background-color: var(--body-color);
 		padding: 10px;
 		border-radius: 20px;
 
@@ -18,10 +18,10 @@
 			justify-content: center;
 			align-items: center;
 			border: none;
-			border-right: var(--border);
+			border-right: var(--main-border);
 			padding: 0 10px;
 			background-color: transparent;
-			color: var(--redColor);
+			color: var(--second-color);
 		}
 		input {
 			padding: 5px;
