--- a/client/src/components/Users/Users.scss
+++ b/client/src/components/Users/Users.scss
@@ -9,7 +9,7 @@
 		grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 		gap: 20px;
 		.user {
-			background-color: var(--bodyWhite);
+			background-color: var(--boxes-bg);
 			padding: 10px;
 			border-radius: 10px;
 			box-shadow: var(--boxShadow);
@@ -31,8 +31,8 @@
 			button {
 				padding: 10px 5px;
 				border: none;
-				background-color: var(--redColor);
-				color: var(--textColor);
+				background-color: var(--second-color);
+				color: var(--main-text-color);
 				width: 100%;
 				margin-left: auto;
 				border-radius: 10px;
