--- a/client/src/css/Cart/Cart.css
+++ b/client/src/css/Cart/Cart.css
@@ -1,7 +1,7 @@
 .cart {
   grid-area: main;
   margin: 20px auto;
-  background-color: var(--bodyWhite);
+  background-color: var(--boxes-bg);
   border-radius: 20px;
   box-shadow: var(--boxShadow);
   height: fit-content;
@@ -14,8 +14,8 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  background-color: var(--bkBlue);
-  color: var(--textSecondColor);
+  background-color: var(--main-light-bg);
+  color: var(--second-text-color);
 }
 .cart .heading > div {
   width: 25%;
@@ -26,7 +26,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  border-bottom: var(--border);
+  border-bottom: var(--main-border);
 }
 .cart .cart-items .cart-item .image {
   text-align: center;
@@ -34,7 +34,7 @@
   flex-direction: column;
   gap: 10px;
   align-items: center;
-  color: var(--mainColor);
+  color: var(--second-text-color);
   text-transform: capitalize;
   width: 25%;
 }
@@ -52,7 +52,7 @@
 }
 .cart .cart-items .cart-item .image h5 .color {
   display: inline-block;
-  border: var(--border);
+  border: var(--main-border);
   border-radius: 50%;
   width: 25px;
   height: 25px;
@@ -62,7 +62,7 @@
 .cart .cart-items .cart-item .remove {
   text-align: center;
   width: 25%;
-  color: var(--textSecondColor);
+  color: var(--second-text-color);
 }
 .cart .cart-items .cart-item .price .discount,
 .cart .cart-items .cart-item .quantity .discount,
@@ -73,9 +73,9 @@
 .cart .cart-items .cart-item .quantity .icon,
 .cart .cart-items .cart-item .remove .icon {
   border-radius: 50%;
-  border: var(--border);
+  border: var(--main-border);
   display: flex;
-  background-color: var(--bodyColor);
+  background-color: var(--body-color);
   justify-content: center;
   align-items: center;
   width: 50px;
@@ -97,7 +97,7 @@
 .cart .cart-items .cart-item .price .quantity-options,
 .cart .cart-items .cart-item .quantity .quantity-options,
 .cart .cart-items .cart-item .remove .quantity-options {
-  background-color: var(--bodyColor);
+  background-color: var(--body-color);
   display: flex;
   justify-content: space-between;
   text-align: center;
@@ -115,14 +115,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: var(--textColor);
+  color: var(--main-text-color);
   cursor: pointer;
-}
-.cart .cart-items .cart-item .price .quantity-options > span:first-child,
-.cart .cart-items .cart-item .quantity .quantity-options > span:first-child,
-.cart .cart-items .cart-item .remove .quantity-options > span:first-child {
-  background-color: var(--redColor);
-  color: var(--textColor);
+  background-color: var(--second-color);
+  color: var(--main-text-color);
 }
 .cart .cart-items .cart-item .price .quantity-options > span.hide,
 .cart .cart-items .cart-item .quantity .quantity-options > span.hide,
@@ -137,8 +133,8 @@
   font-size: 18px;
   letter-spacing: 1px;
   text-align: center;
-  background-color: var(--redColor);
-  color: var(--textColor);
+  background-color: var(--second-color);
+  color: var(--main-text-color);
 }
 .cart .cart-empty {
   display: flex;
@@ -149,8 +145,8 @@
   padding: 10px;
 }
 .cart .cart-empty a {
-  color: var(--textColor);
-  background-color: var(--redColor);
+  color: var(--main-text-color);
+  background-color: var(--second-color);
   padding: 10px;
   border-radius: 10px;
   text-decoration: none;
@@ -218,8 +214,8 @@
   border: none;
   padding: 10px;
   transition: 0.3s;
-  border: var(--border);
-  color: var(--textSecondColor);
+  border: var(--main-border);
+  color: var(--second-text-color);
 }
 .checkout-modal .accept-order form .input-box input:hover, .checkout-modal .accept-order form .input-box input:focus {
   border-radius: 10px;
@@ -243,8 +239,8 @@
   width: 50%;
   padding: 10px 20px;
   border: none;
-  background-color: var(--redColor);
-  color: var(--textColor);
+  background-color: var(--second-color);
+  color: var(--main-text-color);
   transition: 0.3s;
   border-radius: 5px;
 }
