--- a/client/src/css/ErrorPage/ErrorPage.css
+++ b/client/src/css/ErrorPage/ErrorPage.css
@@ -16,8 +16,8 @@
 }
 .error-page a {
   text-decoration: none;
-  color: var(--textColor);
-  background-color: var(--redColor);
+  color: var(--main-text-color);
+  background-color: var(--second-color);
   padding: 10px 20px;
   border-radius: 10px;
 }
