--- a/client/src/css/Footer/Footer.css
+++ b/client/src/css/Footer/Footer.css
@@ -1,10 +1,73 @@
 footer {
-  padding: 20px;
   grid-area: footer;
+  height: fit-content;
+  padding: 20px;
   background-color: var(--mainColor);
-  color: var(--textColor);
+  color: var(--main-text-color);
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+footer > div {
+  width: 100%;
+}
+footer .title {
+  border-bottom: var(--main-border);
+  margin-bottom: 10px;
+  padding-bottom: 5px;
+  width: fit-content;
+}
+footer .info {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: stretch;
+  gap: 10px;
+}
+footer .info .about {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 400px;
+}
+footer .info .contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+footer .info .contact .content > div {
+  margin-top: 7px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+footer .info .contact .content > div svg {
+  color: var(--main-text-color);
+}
+footer hr {
+  background-color: var(--second-color);
+  width: 100%;
+  height: 1px;
+  border: none;
+}
+footer .social {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+footer .social .icons {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+footer .social .icons svg {
+  color: var(--main-text-color);
+  cursor: pointer;
+  font-size: 30px;
+}
+footer .social .icons svg:hover {
+  transition: 0.3s;
+  color: var(--second-color);
 }
