--- a/client/src/css/Header/Header.css
+++ b/client/src/css/Header/Header.css
@@ -21,7 +21,7 @@ header .container .logo {
 }
 header .container .logo > a {
   text-transform: none;
-  color: var(--textColor);
+  color: var(--main-text-color);
   text-decoration: none;
   font-size: 20px;
   display: flex;
@@ -35,7 +35,7 @@ header .container .logo > a img.cart-logo {
   width: 45px;
 }
 header .container .logo .admin span {
-  color: var(--textColor);
+  color: var(--main-text-color);
   padding: 10px;
   font-size: 22px;
   cursor: pointer;
@@ -64,9 +64,9 @@ header .container .logo .admin .admin-dashboard a.admin-dashboard-btn {
   width: 100%;
   display: block;
   padding: 10px;
-  background-color: var(--redColor);
+  background-color: var(--second-color);
   text-decoration: none;
-  color: var(--textColor);
+  color: var(--main-text-color);
   display: block;
   font-weight: bold;
   position: relative;
@@ -77,6 +77,45 @@ header .container .logo .admin .admin-dashboard a.admin-dashboard-btn:hover {
 }
 header .container nav {
   display: flex;
+}
+header .container nav li {
+  color: var(--main-text-color);
+}
+header .container nav .theme-toggle {
+  cursor: pointer;
+  background-color: #111;
+  border-radius: 60px;
+  width: 60px;
+  height: 26px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px;
+  margin-left: 10px;
+  position: relative;
+}
+header .container nav .theme-toggle .circle {
+  position: absolute;
+  width: 22px;
+  height: 22px;
+  background-color: white;
+  border-radius: 50%;
+  top: 2px;
+  left: 2px;
+  transition: 0.3s;
+}
+header .container nav .theme-toggle .circle.move-right {
+  transform: translateX(34px);
+}
+header .container nav .theme-toggle svg {
+  width: 18px;
+  height: 18px;
+}
+header .container nav .theme-toggle svg.sun {
+  color: #f39c12;
+}
+header .container nav .theme-toggle svg.moon {
+  color: #f1c40f;
 }
 header .container nav .main-list {
   list-style: none;
@@ -93,7 +132,7 @@ header .container nav .main-list > li > a {
   display: flex;
   align-items: center;
   gap: 5px;
-  color: var(--textColor);
+  color: var(--main-text-color);
   text-decoration: none;
   padding: 10px;
   position: relative;
@@ -106,8 +145,8 @@ header .container nav .main-list > li > a.cart-link {
 }
 header .container nav .main-list > li > a.cart-link span {
   position: absolute;
-  background-color: var(--redColor);
-  color: var(--textColor);
+  background-color: var(--second-color);
+  color: var(--main-text-color);
   width: 15px;
   height: 15px;
   display: flex;
@@ -128,12 +167,12 @@ header .container nav .main-list > li > a::after {
   transform: translate(-50%, -50%) scale(0);
   width: 100%;
   height: 100%;
-  background-color: var(--redColor);
+  background-color: var(--second-color);
   z-index: -1;
   transition: 0.4s;
 }
 header .container nav .main-list > li > a:not(.login):not(.signup):hover, header .container nav .main-list > li > a:not(.login):not(.signup).active {
-  color: var(--textColor);
+  color: var(--main-text-color);
   font-weight: bold;
   border-radius: 20px;
 }
@@ -143,11 +182,10 @@ header .container nav .main-list > li > a:not(.login):not(.signup):hover::after,
 }
 header .container nav .main-list > li > a:not(.login):not(.signup):hover.cart-link > span, header .container nav .main-list > li > a:not(.login):not(.signup).active.cart-link > span {
   transition: 0.3s;
-  background-color: var(--bodyWhite);
-  color: var(--redColor);
+  background-color: #fff;
+  color: #333;
   position: relative;
   display: flex;
-  font-size: 17px;
   padding: 10px;
 }
 header .container nav .main-list > li > a.signup, header .container nav .main-list > li > a.login {
@@ -157,7 +195,7 @@ header .container nav .main-list > li > a.signup svg, header .container nav .mai
   font-size: 25px;
 }
 header .container nav .main-list > li > a.signup:hover, header .container nav .main-list > li > a.signup.active, header .container nav .main-list > li > a.login:hover, header .container nav .main-list > li > a.login.active {
-  color: var(--textColor);
+  color: var(--main-text-color);
   font-weight: bold;
 }
 header .container nav .main-list > li > a.signup:hover::after, header .container nav .main-list > li > a.signup.active::after, header .container nav .main-list > li > a.login:hover::after, header .container nav .main-list > li > a.login.active::after {
@@ -169,12 +207,12 @@ header .container nav .main-list > li.drop-menu img {
   height: 40px;
   cursor: pointer;
   border-radius: 50%;
-  object-fit: cover;
+  object-fit: contain;
 }
 header .container nav .main-list > li.drop-menu .menu-content {
   padding: 10px;
   transition: all 0.3s;
-  background-color: var(--bodyWhite);
+  background-color: var(--boxes-bg);
   position: absolute;
   right: 0;
   top: 55px;
@@ -191,22 +229,22 @@ header .container nav .main-list > li.drop-menu .menu-content > a {
   display: flex;
   align-items: center;
   gap: 15px;
-  color: var(--textSecondColor);
+  color: var(--second-text-color);
   text-decoration: none;
   padding: 10px;
   z-index: 1;
   transition: 0.5s;
 }
 header .container nav .main-list > li.drop-menu .menu-content > a:not(:last-child) {
-  border-bottom: 1px solid var(--textColor);
+  border-bottom: 1px solid var(--main-text-color);
 }
 header .container nav .main-list > li.drop-menu .menu-content > a svg {
   font-size: 25px;
   transition: all 0.5s;
-  color: var(--redColor);
+  color: var(--second-color);
 }
 header .container nav .main-list > li.drop-menu .menu-content > a:hover {
-  background-color: var(--bkBlue);
+  background-color: var(--main-light-bg);
 }
 header .container nav .main-responsive-list {
   z-index: 11;
@@ -231,12 +269,12 @@ header .container nav .main-responsive-list .toggle-bar {
   cursor: pointer;
 }
 header .container nav .main-responsive-list .toggle-bar svg {
-  fill: var(--textColor);
+  fill: var(--main-text-color);
   font-size: 20px;
   transition: all 0.3s;
 }
 header .container nav .main-responsive-list .responsive-list {
-  background-color: var(--bodyWhite);
+  background-color: var(--boxes-bg);
   width: 300px;
   transform: scale(0);
   box-shadow: var(--boxShadowStrong);
@@ -246,9 +284,10 @@ header .container nav .main-responsive-list .responsive-list {
   left: -320px;
   display: flex;
   flex-direction: column;
-  color: var(--textSecondColor);
+  color: var(--second-text-color);
   transition: all 0.5s;
   padding: 10px;
+  border: var(--boxes-border);
 }
 header .container nav .main-responsive-list .responsive-list.move {
   transform: scale(1);
@@ -257,35 +296,17 @@ header .container nav .main-responsive-list .responsive-list > div {
   transition: 0.3s;
 }
 header .container nav .main-responsive-list .responsive-list > div:not(:first-child) {
-  border-top: var(--border);
+  border-top: var(--main-border);
 }
 header .container nav .main-responsive-list .responsive-list > div a {
   display: flex;
   align-items: center;
-  color: var(--textSecondColor);
+  color: var(--second-text-color);
   text-decoration: none;
   padding: 5px 10px;
 }
-header .container nav .main-responsive-list .responsive-list > div a .cart-link {
-  position: relative;
-}
-header .container nav .main-responsive-list .responsive-list > div a .cart-link span {
-  background-color: var(--redColor);
-  width: 15px;
-  height: 15px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  color: var(--textColor);
-  position: absolute;
-  top: -10px;
-  right: -10px;
-  padding: 7px;
-  font-size: 12px;
-}
 header .container nav .main-responsive-list .responsive-list > div a:hover {
-  background-color: var(--bkBlue);
+  background-color: var(--main-light-bg);
 }
 header .container nav .main-responsive-list .responsive-list > div svg {
   font-size: 30px;
@@ -301,14 +322,21 @@ header .container nav .main-responsive-list .responsive-list .profile-ul a img {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  object-fit: contain;
+  object-fit: cover;
 }
 header .container nav .main-responsive-list .responsive-list .profile-ul svg {
   transform: rotate(180deg);
 }
 header .container nav .main-responsive-list .responsive-list .profile-ul svg:hover {
-  color: var(--secondColor);
+  color: var(--hover-bg);
   filter: brightness(1.5);
+}
+header .container nav .main-responsive-list .responsive-list .theme {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
 }
 header .container nav .main-responsive-list .responsive-list .basic-ul {
   padding: 10px 0;
@@ -325,7 +353,25 @@ header .container nav .main-responsive-list .responsive-list .basic-ul a {
   transition: all 0.3s;
 }
 header .container nav .main-responsive-list .responsive-list .basic-ul a svg {
-  color: var(--mainColor);
+  color: var(--second-text-color);
+}
+header .container nav .main-responsive-list .responsive-list .basic-ul a .cart-link {
+  position: relative;
+}
+header .container nav .main-responsive-list .responsive-list .basic-ul a .cart-link span {
+  background-color: var(--second-color);
+  width: 15px;
+  height: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  color: var(--main-text-color);
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  padding: 7px;
+  font-size: 12px;
 }
 header .container nav .main-responsive-list .responsive-list .logout a {
   display: flex;
@@ -333,7 +379,7 @@ header .container nav .main-responsive-list .responsive-list .logout a {
   font-weight: bold;
 }
 header .container nav .main-responsive-list .responsive-list .logout a svg {
-  color: var(--redColor);
+  color: var(--second-color);
 }
 
 @media (max-width: 767px) {
