--- a/client/src/css/SearchBox/SearchBox.css
+++ b/client/src/css/SearchBox/SearchBox.css
@@ -2,7 +2,7 @@
   width: 70%;
   margin: auto;
   padding: 20px;
-  background-color: var(--bodyWhite);
+  background-color: var(--boxes-bg);
   border-radius: 40px;
   box-shadow: var(--boxShadow);
 }
@@ -10,7 +10,7 @@
   display: flex;
   align-items: stretch;
   overflow: hidden;
-  background-color: var(--bodyColor);
+  background-color: var(--body-color);
   padding: 10px;
   border-radius: 20px;
 }
@@ -19,10 +19,10 @@
   justify-content: center;
   align-items: center;
   border: none;
-  border-right: var(--border);
+  border-right: var(--main-border);
   padding: 0 10px;
   background-color: transparent;
-  color: var(--redColor);
+  color: var(--second-color);
 }
 .search .box input {
   padding: 5px;
