--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,24 +1,41 @@
 :root {
-    --mainColor: #41b1d3;
-    --secondColor: #F3F5F9;
-    --redColor: #d23f57;
-    --bkBlue: #b8d8e088;
-    --bkRed: rgb(252, 233, 236);
+    /* * Dark Theme */
+    /* --mainColor: #2a2d2e;
+    --hover-bg: #48494d;
+    --second-color: #e9c1c7;
+    --main-light-bg: #a9afb188;
+    --second-light-bg: rgb(104, 104, 104);
+    --boxShadow: 0px 1px 5px rgba(85, 83, 121, 0.09);
+    --boxShadowStrong: 0px 5px 5px rgba(91, 90, 97, 0.15);
+    --main-text-color: #f3f3f3;
+    --second-text-color: #c1c4cc;
+    --body-color: #688f8f;
+    --boxes-bg: rgba(83, 62, 62, 0.993);
+    --main-border: 1px solid #ddd;
+    --main-padding: 10px;
+    --text-color-light: #939394; */
+
+    /* * Light Theme */
+    /* --mainColor: #41b1d3;
+    --hover-bg: #F3F5F9;
+    --second-color: #d23f57;
+    --main-light-bg: #b8d8e088;
+    --second-light-bg: rgb(252, 233, 236);
     --boxShadow: 0px 1px 5px rgb(3 0 71 / 9%);
     --boxShadowStrong: 0px 5px 5px rgb(3 0 71/ 15%);
-    --textColor: #f3f3f3;
-    --textSecondColor: #373F50;
-    --bodyColor: #F6F9F9;
-    --bodyWhite: #fff;
-    --border: 1px solid #ddd;
-    --padding: 10px;
-    --light-txt: #7D879C;
+    --main-text-color: #f3f3f3;
+    --second-text-color: #373F50;
+    --body-color: #F6F9F9;
+    --boxes-bg: #fff;
+    --main-border: 1px solid #ddd;
+    --main-padding: 10px;
+    --text-color-light: #7D879C; */
 
 }
 
 
 body {
-    background-color: var(--bodyColor);
+    background-color: var(--body-color);
     font-size: 14px;
     transition: .3s;
     scroll-behavior: smooth;
@@ -82,7 +99,7 @@ body {
 }
 
 .login-msg a {
-    color: var(--redColor);
+    color: var(--second-color);
     text-decoration: none;
 }
 
@@ -94,18 +111,18 @@ body {
     align-items: center;
     font-weight: bold;
     font-size: 17px;
-    color: var(--redColor) !important;
+    color: var(--second-color) !important;
 }
 
 .discount .origin-price {
     text-decoration: line-through;
     border: none;
-    color: var(--light-txt) !important;
+    color: var(--text-color-light) !important;
 }
 
 .discount .discount-price {
     margin-right: 5px;
-    color: var(--redColor) !important;
+    color: var(--second-color) !important;
 }
 
 
@@ -123,6 +140,12 @@ button:active, svg:active, a:active {
     transform: scale(0.98);
 }
 
+/* INputs */
+input, textarea {
+    caret-color: var(--second-color);
+    color: var(--second-text-color);
+}
+
 /* * Model Style */
 .modal {
     position: absolute;
@@ -133,7 +156,7 @@ button:active, svg:active, a:active {
     max-height: 90%;
     margin-top: 20px;
     transition: all .4s;
-    background-color: var(--bodyColor);
+    background-color: var(--boxes-bg);
     padding: 20px;
     border-radius: 10px;
     overflow: auto;
@@ -151,7 +174,7 @@ button:active, svg:active, a:active {
     height: 100%;
     top: 0;
     left: 0;
-    background-color: rgba(61, 61, 61, 0.7);
+    background-color: var(--model-overlay-bg);
     z-index: 11111;
     transition: all 0.5s ease-in-out;
 }
@@ -176,7 +199,7 @@ button:active, svg:active, a:active {
 }
 
 ::-webkit-scrollbar-track {
-    background-color: var(--secondColor);
+    background-color: var(--hover-bg);
 }
 
 ::-webkit-scrollbar-thumb {
