--- a/client/src/pages/CreateProduct/CreateProduct.scss
+++ b/client/src/pages/CreateProduct/CreateProduct.scss
@@ -1,202 +1,351 @@
 .create-product {
 	grid-area: main;
-	position: relative;
+	margin-top: 20px;
+	margin-bottom: 20px;
+
 	display: flex;
-	justify-content: center;
 	align-items: center;
-	padding: 10px;
+	justify-content: space-between;
+	gap: 30px;
+	padding: 20px;
+	background-color: var(--boxes-bg);
+	border-radius: 20px;
+	box-shadow: var(--boxShadow);
 
-	form {
+	.col-1 {
 		display: flex;
-		align-items: center;
-		justify-content: space-between;
-		gap: 30px;
-		padding: 20px;
-		background-color: var(--bodyWhite);
-		border-radius: 20px;
-		box-shadow: var(--boxShadow);
-
-		.error {
-			color: var(--redColor);
-			background-color: transparent;
-			text-transform: lowercase;
-			width: fit-content;
-			margin: auto;
-			padding: 0;
-		}
-
-		.col-1 {
-			flex: 1;
-			display: flex;
-			flex-direction: column;
-			gap: 10px;
-			.input-box {
-				label {
-					display: flex;
-					align-items: center;
-					span {
-						width: 100px;
-						color: var(--textSecondColor);
-						font-weight: bold;
-					}
-					input,
-					textarea {
-						flex: 1;
-						padding: 7px 10px;
-						background-color: var(--bodyColor);
-						border: none;
-						transition: all 0.3s;
-						border-radius: 5px;
-						border: var(--border);
-						&:focus {
-							outline: none;
-							padding-left: 13px;
-							&::placeholder {
-								transition: all 0.3s;
-								color: transparent;
-							}
+		flex-direction: column;
+		gap: 10px;
+		.input-box {
+			width: 100%;
+			label {
+				display: flex;
+				align-items: center;
+				span {
+					width: 100px;
+					color: var(--second-text-color);
+					font-weight: bold;
+				}
+				input,
+				textarea {
+					flex: 1;
+					padding: 7px 10px;
+					background-color: var(--body-color);
+					border: none;
+					transition: all 0.3s;
+					border-radius: 5px;
+					border: var(--main-border);
+					&:focus {
+						outline: none;
+						padding-left: 13px;
+						&::placeholder {
+							transition: all 0.3s;
+							color: transparent;
 						}
 					}
-					textarea {
-						resize: none;
-						height: 150px;
+				}
+				textarea {
+					resize: none;
+					height: 150px;
+				}
+			}
+		}
+
+		.sizes {
+			.view-sizes-select {
+				width: 100%;
+				display: flex;
+				align-items: center;
+				gap: 5px;
+				p {
+					border: var(--main-border);
+					border-radius: 10px;
+					padding: 5px;
+					display: flex;
+					align-items: center;
+					justify-content: space-between;
+					gap: 10px;
+					> span {
+						width: 20px;
+						height: 20px;
+						display: flex;
+						justify-content: center;
+						align-items: center;
+						cursor: pointer;
+						border-radius: 50%;
+						&:hover {
+							border: var(--main-border);
+						}
+						svg {
+							color: var(--second-color);
+						}
 					}
 				}
 			}
-			.multi-select-size {
+			.drop-menu {
 				width: 100%;
-			}
-			.colors {
-				.colors-config {
+				margin-top: 10px;
+				margin-bottom: 5px;
+				border: var(--main-border);
+				border-radius: 10px;
+				overflow: hidden;
+				.select {
+					background-color: var(--boxes-bg);
+					color: var(--second-text-color);
+					padding: 10px;
+					transition: 0.3s;
 					display: flex;
-					align-items: center;
-					flex-wrap: wrap;
-					gap: 20px;
-					input[type='color'] {
-						-webkit-appearance: none;
-						border: 1px solid #c0c0c0;
-						overflow: hidden;
-						width: 50px;
-						height: 50px;
-						border-radius: 50%;
-						cursor: pointer;
-						&::-webkit-color-swatch-wrapper {
-							padding: 0;
-						}
-						&::-webkit-color-swatch {
-							border: none;
-						}
-					}
-					button {
-						padding: 10px;
-						border: none;
-						color: var(--textSecondColor);
-						border: 1px solid var(--redColor);
-						background-color: var(--bodyWhite);
-						border-radius: 5px;
-						transition: all 0.3s;
-						&:hover {
-							background-color: var(--redColor);
-							color: var(--textColor);
-						}
-					}
-					.display-colors {
+					justify-content: space-between;
+					align-items: stretch;
+					.input {
 						display: flex;
-						justify-content: center;
+						align-items: stretch;
 						gap: 10px;
-						> div {
-							position: relative;
-							display: inline-flex;
-							justify-content: center;
-							align-items: center;
-							width: 30px;
-							height: 30px;
-							border-radius: 50%;
-							cursor: pointer;
-							svg {
-								opacity: 0;
-								transition: all 0.3s;
-							}
-							&:hover {
-								svg {
-									opacity: 1;
-									cursor: pointer;
-									color: black;
+						z-index: 11;
+
+						input {
+							padding: 7px 10px;
+							background-color: var(--body-color);
+							border: none;
+							transition: all 0.3s;
+							border-radius: 5px;
+							border: var(--main-border);
+							&:focus {
+								outline: none;
+								padding-left: 13px;
+								&::placeholder {
+									transition: all 0.3s;
+									color: transparent;
 								}
 							}
 						}
+						button {
+							padding: 10px;
+							border: none;
+							color: var(--second-text-color);
+							border: 1px solid var(--second-color);
+							background-color: var(--boxes-bg);
+							border-radius: 5px;
+							transition: all 0.3s;
+							&:hover {
+								background-color: var(--second-color);
+								color: var(--main-text-color);
+							}
+						}
+					}
+					> span {
+						width: 30px;
+						display: flex;
+						align-items: center;
+						justify-content: center;
+						cursor: pointer;
+						svg {
+							transition: 0.4s;
+							transform: rotate(90deg);
+							color: var(--second-color);
+							font-size: 23px;
+							&.rotate {
+								transform: rotate(90deg) rotate(-180deg);
+							}
+						}
+					}
+				}
+				.menu-content {
+					max-height: 0;
+					overflow: hidden;
+					opacity: 0;
+					transition: 0.3s;
+					display: flex;
+					justify-content: center;
+					flex-wrap: wrap;
+					border-top: var(--main-border);
+					&.show {
+						max-height: 500px;
+						opacity: 1;
+					}
+					p {
+						background-color: var(--boxes-bg);
+						color: var(--second-text-color);
+						padding: 10px;
+						cursor: pointer;
+						transition: 0.3s;
+						width: 30px;
+						height: 30px;
+						display: flex;
+						justify-content: center;
+						align-items: center;
+						&.active {
+							background-color: var(--second-color);
+							color: var(--main-text-color);
+						}
+
+						&:not(.active):hover {
+							background-color: var(--hover-bg);
+						}
 					}
 				}
 			}
-			button.submit {
-				background: var(--redColor);
-				width: 100%;
-				color: var(--textColor);
-				border: none;
-				border-radius: 10px;
-				padding: 10px 20px;
-				font-weight: bold;
-				font-size: 20px;
-				text-transform: capitalize;
-				cursor: pointer;
-				opacity: 0.9;
-				transition: 0.3s;
-				&:hover {
-					opacity: 1;
+		}
+
+		.colors {
+			.colors-config {
+				display: flex;
+				align-items: center;
+				flex-wrap: wrap;
+				gap: 20px;
+				input[type='color'] {
+					-webkit-appearance: none;
+					border: 1px solid #c0c0c0;
+					overflow: hidden;
+					width: 50px;
+					height: 50px;
+					border-radius: 50%;
+					cursor: pointer;
+					&::-webkit-color-swatch-wrapper {
+						padding: 0;
+					}
+					&::-webkit-color-swatch {
+						border: none;
+					}
+				}
+				button {
+					padding: 10px;
+					border: none;
+					color: var(--second-text-color);
+					border: 1px solid var(--second-color);
+					background-color: var(--boxes-bg);
+					border-radius: 5px;
+					transition: all 0.3s;
+					&:hover {
+						background-color: var(--second-color);
+						color: var(--main-text-color);
+					}
+				}
+				.display-colors {
+					display: flex;
+					justify-content: center;
+					gap: 10px;
+					> div {
+						position: relative;
+						display: inline-flex;
+						justify-content: center;
+						align-items: center;
+						width: 30px;
+						height: 30px;
+						border-radius: 50%;
+						cursor: pointer;
+						svg {
+							opacity: 0;
+							transition: all 0.3s;
+						}
+						&:hover {
+							svg {
+								opacity: 1;
+								cursor: pointer;
+								color: black;
+							}
+						}
+					}
 				}
 			}
 		}
-		.col-2 {
-			width: 30%;
-			text-align: center;
+		button.submit {
+			background: var(--second-color);
+			width: 100%;
+			color: var(--main-text-color);
+			border: none;
+			border-radius: 10px;
+			padding: 10px 20px;
+			font-weight: bold;
+			font-size: 20px;
+			text-transform: capitalize;
+			cursor: pointer;
+			opacity: 0.9;
+			transition: 0.3s;
+			&:hover {
+				opacity: 1;
+			}
+		}
+	}
 
-			input {
-				display: none;
+	.col-2 {
+		text-align: center;
+		flex: 1;
+
+		input {
+			display: none;
+		}
+		.img-error {
+			display: flex;
+			flex-direction: column;
+			gap: 20px;
+			position: relative;
+			.camera {
+				position: absolute;
+				left: 50%;
+				transform: translateX(-50%);
+				font-size: 25px;
+				color: var(--second-color);
+				top: -12px;
+				cursor: pointer;
 			}
-			.img-error {
-				display: flex;
-				flex-direction: column;
-				gap: 20px;
-				position: relative;
-				.camera {
-					position: absolute;
-					left: 50%;
-					transform: translateX(-50%);
-					font-size: 25px;
-					color: var(--redColor);
-					top: -12px;
-					cursor: pointer;
-				}
-				img {
-					width: 200px;
-					height: 200px;
-					border: 1px solid #c0c0c0;
-					border-radius: 50%;
-					box-shadow: 2px 2px 5px #c0c0c0;
-					object-fit: contain;
-					margin: auto;
-				}
+			img {
+				width: 200px;
+				height: 200px;
+				border: 1px solid #c0c0c0;
+				border-radius: 50%;
+				box-shadow: var(--boxShadow);
+				object-fit: contain;
+				margin: auto;
 			}
+		}
+	}
+
+	.error {
+		color: var(--second-color);
+		background-color: transparent;
+		text-transform: lowercase;
+		width: fit-content;
+		margin: auto;
+		padding: 0;
+	}
+}
+
+@media (max-width: 991px) {
+	.create-product {
+		.col-1 {
+			width: 60%;
+		}
+		.col-2 {
+			width: 90%;
 		}
 	}
 }
 
 @media (max-width: 767px) {
 	.create-product {
-		form {
-			margin-top: 10px;
-			margin-bottom: 10px;
-			position: relative;
-			top: auto;
-			left: auto;
-			transform: translate(0, 0);
-			flex-direction: column-reverse;
-			.col-1 {
-				width: 90%;
+		margin-top: 10px;
+		margin-bottom: 10px;
+		position: relative;
+		top: auto;
+		left: auto;
+		transform: translate(0, 0);
+		flex-direction: column-reverse;
+		.col-1 {
+			width: 90%;
+			.sizes {
+				.drop-menu {
+					.select {
+						.input {
+							width: 70%;
+							gap: 1px;
+						}
+					}
+				}
 			}
-			.col-2 {
-				width: 90%;
-			}
+		}
+		.col-2 {
+			width: 90%;
 		}
 	}
 }
