--- a/client/src/pages/Orders/Orders.scss
+++ b/client/src/pages/Orders/Orders.scss
@@ -7,177 +7,73 @@
 	.heading {
 		display: flex;
 		margin-bottom: 20px;
-		color: var(--textSecondColor);
+		color: var(--second-text-color);
 		font-size: 20px;
 
 		.head-item {
 			width: 25%;
-			padding: var(--padding) 20px;
+			padding: var(--main-padding) 20px;
 			text-align: center;
 		}
 	}
 
 	.order-information {
-		.main-order {
+		display: flex;
+		flex-wrap: wrap;
+		align-items: stretch;
+		background-color: var(--boxes-bg);
+		box-shadow: var(--boxShadow);
+		border-radius: 50px;
+		margin-bottom: 10px;
+		> div {
+			color: var(--second-text-color);
+			width: 25%;
+			padding: 15px 20px;
+			font-size: 17px;
 			display: flex;
-			flex-wrap: wrap;
-			align-items: stretch;
-			background-color: var(--bodyWhite);
-			box-shadow: var(--boxShadow);
-			border-top-left-radius: 10px;
-			border-top-right-radius: 10px;
-			> div {
-				color: var(--textSecondColor);
-				width: 25%;
-				padding: 15px 20px;
-				font-size: 17px;
-				display: flex;
-				align-items: center;
-				justify-content: center;
+			align-items: center;
+			justify-content: center;
 
+			svg {
+				font-size: 20px;
+				transition: all 0.3s;
+			}
+			&.show-more,
+			&.delete {
+				width: fit-content;
+				padding: 10px;
+				margin: auto;
+				border-radius: 50%;
+				transition: 0.3s;
+				cursor: pointer;
 				svg {
 					font-size: 20px;
-					transition: all 0.3s;
-				}
-				&.show-more,
-				&.delete {
-					width: fit-content;
-					padding: 10px;
-					margin: auto;
-					border-radius: 50%;
+					color: var(--second-text-color);
 					transition: 0.3s;
-					cursor: pointer;
-					svg {
-						font-size: 20px;
-						color: var(--textSecondColor);
-						transition: 0.3s;
-					}
-					&:hover {
-						background-color: var(--secondColor);
-						svg {
-							color: var(--redColor);
-						}
-					}
 				}
-				&.edit-arrow {
+				&:hover {
+					background-color: var(--hover-bg);
 					svg {
-						color: var(--redColor);
-						transition: all 0.3s;
-						transform: rotate(90deg);
-						// width: fit-content;
-						// height: fit-content;
-					}
-				}
-				&.image {
-					display: block;
-					text-align: center;
-					img {
-						width: 50px;
-						height: 50px;
-						border-radius: 50%;
+						color: var(--second-color);
 					}
 				}
 			}
-		}
-
-		.order-details {
-			transition: height 0.4s, opacity 0.4s;
-			height: 0;
-			opacity: 0;
-			overflow: hidden;
-			margin-bottom: 10px;
-			background-color: var(--bodyWhite);
-			box-shadow: var(--boxShadow);
-			border-bottom-left-radius: 10px;
-			border-bottom-right-radius: 10px;
-			&.show {
-				opacity: 1;
-			}
-			.order-items {
-				padding: var(--padding);
-				display: flex;
-				flex-direction: column;
-				gap: 10px;
-				.order-item {
-					background: var(--bodyColor);
-					box-shadow: var(--boxShadow);
-					padding: 5px;
-					display: flex;
-					align-items: center;
-					> div {
-						width: 25%;
-						text-align: center;
-					}
-					.img-item {
-						img {
-							width: 50px;
-							height: 50px;
-							object-fit: contain;
-						}
-					}
-					.price {
-						color: var(--textSecondColor);
-						span {
-							margin-top: 5px;
-							display: flex;
-							justify-content: center;
-							align-items: center;
-							gap: 5px;
-							font-size: 14px;
-							svg {
-								font-size: 13px;
-							}
-						}
-					}
-					.delete {
-						cursor: pointer;
-						svg {
-							padding: 10px;
-							font-size: 40px;
-							transition: 0.3s;
-							border-radius: 50%;
-							color: var(--redColor);
-							margin: auto;
-							&:hover {
-								background-color: var(--bkBlue);
-								box-shadow: var(--boxShadow);
-							}
-						}
-					}
-					.size-color {
-						display: flex;
-						justify-content: center;
-						align-items: center;
-						border: var(--border);
-						width: fit-content;
-						margin: auto;
-						// border-radius: 30px;
-						overflow: hidden;
-						span {
-							width: 40px;
-							display: block;
-							height: 40px;
-							text-align: center;
-							display: flex;
-							justify-content: center;
-							align-items: center;
-							color: var(--textSecondColor);
-							font-weight: bold;
-						}
-					}
+			&.edit-arrow {
+				svg {
+					color: var(--second-color);
+					transition: all 0.3s;
+					transform: rotate(90deg);
+					// width: fit-content;
+					// height: fit-content;
 				}
-				.user-info {
-					> p {
-						background-color: var(--bkBlue);
-						border-radius: 5px;
-						padding: 5px;
-						color: var(--textSecondColor);
-						margin-bottom: 1px;
-						span {
-							display: inline-block;
-							width: 100px;
-						}
-					}
+			}
+			&.image {
+				display: block;
+				text-align: center;
+				img {
+					width: 50px;
+					height: 50px;
+					border-radius: 50%;
 				}
 			}
 		}
