--- a/client/src/pages/Profile/Profile.scss
+++ b/client/src/pages/Profile/Profile.scss
@@ -11,7 +11,7 @@
 	.user-image {
 		border-radius: 10px;
 		box-shadow: var(--boxShadow);
-		background-color: var(--bodyWhite);
+		background-color: var(--boxes-bg);
 		width: 30%;
 		display: flex;
 		gap: 40px;
@@ -50,22 +50,22 @@
 		.user-configuration {
 			button {
 				padding: 10px;
-				color: var(--textColor);
+				color: var(--main-text-color);
 				background-color: var(--mainColor);
 				transition: 0.3s;
-				border: var(--border);
+				border: var(--main-border);
 				font-size: 17px;
 				display: block;
 				width: 80%;
 				border-radius: 10px;
-				font-family: 'operator mono lig';
+				font-family: "operator mono lig";
 				cursor: pointer;
 				margin: 0 auto 10px;
 				// border: none;
 				opacity: 0.8;
 				&:last-child {
-					background-color: var(--redColor);
-					color: var(--textColor);
+					background-color: var(--second-color);
+					color: var(--main-text-color);
 				}
 				&:hover {
 					opacity: 1;
@@ -77,7 +77,7 @@
 	.user-info {
 		border-radius: 10px;
 		box-shadow: var(--boxShadow);
-		background-color: var(--bodyWhite);
+		background-color: var(--boxes-bg);
 		width: 70%;
 		@media (max-width: 768px) {
 			width: 100%;
@@ -96,19 +96,19 @@
 				box-shadow: var(--boxShadow);
 				padding: 10px;
 				border-radius: 10px;
-				background-color: var(--bodyColor);
+				background-color: var(--body-color);
 				h3 {
 					margin-bottom: 20px;
 				}
 				input {
 					padding: 10px;
 					width: 100%;
-					border: var(--border);
+					border: var(--main-border);
 					border-radius: 5px;
 					box-shadow: var(--boxShadow◘);
 					&:focus {
 						outline: none;
-						border-color: var(--redColor);
+						border-color: var(--second-color);
 					}
 				}
 			}
@@ -126,7 +126,7 @@
 		.change-form {
 			box-shadow: var(--boxShadow);
 			border-radius: 10px;
-			background-color: var(--bodyWhite);
+			background-color: var(--boxes-bg);
 			padding: 10px;
 			width: 80%;
 			height: 200px;
@@ -149,11 +149,11 @@
 				width: 100%;
 				padding: 10px;
 				border: none;
-				background-color: var(--bodyColor);
+				background-color: var(--body-color);
 				border-radius: 30px;
 				.error {
 					background-color: transparent;
-					color: var(--redColor);
+					color: var(--second-color);
 					padding: 0px 6px;
 				}
 				&:focus {
@@ -167,9 +167,9 @@
 				gap: 20px;
 				button {
 					padding: 10px;
-					background-color: var(--redColor);
+					background-color: var(--second-color);
 					border-radius: 10px;
-					color: var(--textColor);
+					color: var(--main-text-color);
 					border: none;
 					margin-top: 10px;
 				}
@@ -191,8 +191,8 @@
 			button {
 				padding: 10px 20px;
 				border: none;
-				background-color: var(--redColor);
-				color: var(--textColor);
+				background-color: var(--second-color);
+				color: var(--main-text-color);
 				transition: 0.3s;
 				border-radius: 5px;
 				&:hover {
